// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Tobacco Risk Info should match snapshot 1`] = `
Object {
  "CardIcon": <NoTobacco
    color="#00847F"
    height="1.125rem"
    width="1.125rem"
  />,
  "color": "green",
  "description": "NonSmoker",
  "id": "tobacco",
  "subTitle": "NonSmoker",
  "title": "Tobacco",
}
`;

exports[`Create Tobacco Risk Info should match snapshot for smoker 1`] = `
Object {
  "CardIcon": <Tobacco
    color="red"
    height="1.125rem"
    width="1.125rem"
  />,
  "color": "red",
  "description": "Smoker",
  "id": "tobacco",
  "subTitle": "Smoker",
  "title": "Tobacco",
}
`;
